# odoo-erp-agent

./: .gitignore  PROPOSAL_FREE_LLM_AND_BRANCHING.md  README.md  app.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  run_interactive_interview.py  run_russell_interview.py  test_builder.py  test_deploy_workflow.py  web_interview.py
api/: index.py
docs/: demo_outcome.json  sample-prd.md  sample-spec.json  swarm_architecture.md
scripts/: run_demo_interview.py  setup_and_test.sh
src/: __init__.py  adaptive_cli.py  cli.py  signals.py  voice_cli.py
src/agents/: __init__.py  adaptive_interview_agent.py  interview_agent.py  phased_interview_agent.py  smart_interview_agent.py
src/branching/: __init__.py  analyzer.py  engine.py  triggers.py
src/builders/: __init__.py  cloud_builder.py  odoo_builder.py  railway_builder.py
src/knowledge/: module_config_requirements.json  odoo_modules.json  odoo_modules_5_3.json
src/llm/: __init__.py  base.py  groq_provider.py  manager.py  ollama_provider.py  openai_provider.py
src/prompts/: __init__.py  interview_agent_prompt.py
src/schemas/: __init__.py  implementation_spec.py  interview_domains.py  shared_context.py
src/swarm/: __init__.py  apply.py  cli.py  moderator.py  normalizer.py  orchestrator.py  qa.py  registry.py  registry_resolver.py  types.py  validator.py
src/swarm/agents/: __init__.py  base.py  domain_agents.py
src/utils/: __init__.py
src/voice/: __init__.py  speech_to_text.py  text_to_speech.py  voice_agent.py
tests/: test_build_api.py  test_e2e_deployment.py  test_edge_cases.py  test_interview_to_prd.py  test_odoo_builder_rpc.py  test_railway_builder.py  test_railway_builder_api.py
